php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43644 is_callable(':') crashes in CLI.
Submitted: 2007-12-20 16:46 UTC Modified: 2007-12-21 01:22 UTC
From: kubo at iteman dot jp Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.3CVS-2007-12-20 (snap) OS: Windows XP SP2
Private report: No CVE-ID: None
 [2007-12-20 16:46 UTC] kubo at iteman dot jp
Description:
------------
is_callable(':') crashes in CLI.

Reproduce code:
---------------
var_dump(is_callable(':'));


Expected result:
----------------
bool(false)

Actual result:
--------------
No display. A Windows Error Reporting dialog box appears.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-12-20 17:43 UTC] felipe@php.net
In Linux works fine.
 [2007-12-21 01:22 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Aug 19 19:00:01 2026 UTC