Fixed bug #43644 (is_callable(':') crashes)